logs/dronekit-textmessaging.log
Listing '.'...
Listing './bin'...
Compiling './bin/LaunchTelemetry.py'...
***   File "./bin/LaunchTelemetry.py", line 70
    print "Verifying initialization values..."
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/MPU6KSearch.py'...
Compiling './bin/gsmterm.py'...
Compiling './bin/identify-modem.py'...
Compiling './bin/magfit.py'...
Compiling './bin/magfit_delta.py'...
Compiling './bin/magfit_gps.py'...
Compiling './bin/magfit_motors.py'...
Compiling './bin/mavextract.py'...
Compiling './bin/mavfft.py'...
Compiling './bin/mavflightmodes.py'...
Compiling './bin/mavflighttime.py'...
Compiling './bin/mavgen.py'...
Compiling './bin/mavgpslock.py'...
Compiling './bin/mavgraph.py'...
Compiling './bin/mavkml.py'...
Compiling './bin/mavlogdump.py'...
Compiling './bin/mavloss.py'...
Compiling './bin/mavmission.py'...
Compiling './bin/mavparmdiff.py'...
Compiling './bin/mavparms.py'...
Compiling './bin/mavplayback.py'...
Compiling './bin/mavsearch.py'...
Compiling './bin/mavsigloss.py'...
Compiling './bin/mavsummarize.py'...
Compiling './bin/mavtogpx.py'...
Compiling './bin/mavtomfile.py'...
Compiling './bin/miniterm.py'...
Compiling './bin/sendsms.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/dronekit'...
Listing './lib/python3.5/site-packages/dronekit/test'...
Listing './lib/python3.5/site-packages/dronekit-2.9.1.egg-info'...
Listing './lib/python3.5/site-packages/dronekit_texting'...
Compiling './lib/python3.5/site-packages/dronekit_texting/TextMessageTelemetry.py'...
***   File "./lib/python3.5/site-packages/dronekit_texting/TextMessageTelemetry.py", line 90
    print message
                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/dronekit_textmessaging-1.0.1.egg-info'...
Listing './lib/python3.5/site-packages/future'...
Listing './lib/python3.5/site-packages/future/backports'...
Listing './lib/python3.5/site-packages/future/backports/email'...
Listing './lib/python3.5/site-packages/future/backports/email/mime'...
Listing './lib/python3.5/site-packages/future/backports/html'...
Listing './lib/python3.5/site-packages/future/backports/http'...
Listing './lib/python3.5/site-packages/future/backports/test'...
Listing './lib/python3.5/site-packages/future/backports/urllib'...
Listing './lib/python3.5/site-packages/future/backports/xmlrpc'...
Listing './lib/python3.5/site-packages/future/builtins'...
Listing './lib/python3.5/site-packages/future/moves'...
Listing './lib/python3.5/site-packages/future/moves/dbm'...
Listing './lib/python3.5/site-packages/future/moves/html'...
Listing './lib/python3.5/site-packages/future/moves/http'...
Listing './lib/python3.5/site-packages/future/moves/test'...
Listing './lib/python3.5/site-packages/future/moves/tkinter'...
Listing './lib/python3.5/site-packages/future/moves/urllib'...
Listing './lib/python3.5/site-packages/future/moves/xmlrpc'...
Listing './lib/python3.5/site-packages/future/standard_library'...
Listing './lib/python3.5/site-packages/future/tests'...
Listing './lib/python3.5/site-packages/future/types'...
Listing './lib/python3.5/site-packages/future/utils'...
Listing './lib/python3.5/site-packages/future-0.16.0.egg-info'...
Listing './lib/python3.5/site-packages/gsmmodem'...
Listing './lib/python3.5/site-packages/gsmtermlib'...
Listing './lib/python3.5/site-packages/libfuturize'...
Listing './lib/python3.5/site-packages/libfuturize/fixes'...
Listing './lib/python3.5/site-packages/libpasteurize'...
Listing './lib/python3.5/site-packages/libpasteurize/fixes'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/monotonic-1.2.dist-info'...
Listing './lib/python3.5/site-packages/past'...
Listing './lib/python3.5/site-packages/past/builtins'...
Listing './lib/python3.5/site-packages/past/tests'...
Listing './lib/python3.5/site-packages/past/translation'...
Listing './lib/python3.5/site-packages/past/types'...
Listing './lib/python3.5/site-packages/past/utils'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pylzma-0.4.9.post0.egg-info'...
Listing './lib/python3.5/site-packages/pymavlink'...
Listing './lib/python3.5/site-packages/pymavlink/dialects'...
Listing './lib/python3.5/site-packages/pymavlink/dialects/v10'...
Listing './lib/python3.5/site-packages/pymavlink/dialects/v20'...
Listing './lib/python3.5/site-packages/pymavlink/generator'...
Listing './lib/python3.5/site-packages/pymavlink/generator/C'...
Listing './lib/python3.5/site-packages/pymavlink/generator/C/include_v1.0'...
Listing './lib/python3.5/site-packages/pymavlink/generator/C/include_v2.0'...
Listing './lib/python3.5/site-packages/pymavlink/generator/CPP11'...
Listing './lib/python3.5/site-packages/pymavlink/generator/CPP11/include_v2.0'...
Listing './lib/python3.5/site-packages/pymavlink/generator/CS'...
Listing './lib/python3.5/site-packages/pymavlink/generator/CS/common'...
Listing './lib/python3.5/site-packages/pymavlink/generator/java'...
Listing './lib/python3.5/site-packages/pymavlink/generator/java/lib'...
Listing './lib/python3.5/site-packages/pymavlink/generator/java/lib/Messages'...
Listing './lib/python3.5/site-packages/pymavlink/generator/swift'...
Listing './lib/python3.5/site-packages/pymavlink/message_definitions'...
Listing './lib/python3.5/site-packages/pymavlink/message_definitions/v0.9'...
Listing './lib/python3.5/site-packages/pymavlink/message_definitions/v1.0'...
Listing './lib/python3.5/site-packages/pymavlink-2.2.8.egg-info'...
Listing './lib/python3.5/site-packages/pyserial-3.4.dist-info'...
Listing './lib/python3.5/site-packages/python_gsmmodem-0.9.egg-info'...
Listing './lib/python3.5/site-packages/serial'...
Listing './lib/python3.5/site-packages/serial/threaded'...
Listing './lib/python3.5/site-packages/serial/tools'...
Listing './lib/python3.5/site-packages/serial/urlhandler'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
